# goFish

./: CMakeLists.txt  a.out  card.cpp  card.h  deck.cpp  deck.h  gofish_results.txt  main.cpp  player.cpp  player.h
